# turmy

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml  test.yml
scripts/mock-slurm/: append-output  reset  run  tqdm-progress
src/: app.rs  file_watcher.rs  job_watcher.rs  main.rs  updater.rs  viewport.rs
